Disregard GDK's extra click events that are for double-clicks and triple-clicks.  Patch by Chris Blizzard <blizzard@mozilla.org>.  r+sr=dbaron  b=227328